# Blog

./: README.md  manage.py  mysite_data.json  pyproject.toml
blog/: asgi.py  settings.py  urls.py  wsgi.py
database_where/: admin.py  apps.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
database_where/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_alter_comment_options_alter_post_options_post_tags.py
database_where/static/: blog.css
database_where/static/css/: blog.css
database_where/templates/: pagination.html
database_where/templates/database_where/post/: base.html  comment.html  detail.html  list.html  search.html  share.html
database_where/templates/database_where/post/includes/: comment_form.html
database_where/templatetags/: blog_tags.py
